<resources>
    <string name="app_name">Apartments</string>
    <string name="email_hint">Email</string>
    <string name="login_title">Login</string>
    <string name="password_hint">Password</string>
    <string name="registration_title">Registration</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="register_button">Register</string>
    <string name="apartment_image_description">Apartment image</string>
    <string name="book_button">Book</string>
    <string name="booking_cancel_button">Booking cancel</string>
    <string name="apartments_menu_item">Apartments</string>
    <string name="write_complaint_menu_item">Write Complaint</string>
    <string name="read_complaint_menu_item">Read Complaints</string>
    <string name="generate_summary_menu_item">Generate Summary</string>
    <string name="send_complaint_button">Send Complaint</string>
    <string name="complaint_label">Complaint</string>
    <string name="city_label">City:</string>
    <string name="rooms_count_label">Number of rooms:</string>
    <string name="price_label">Price per night (€):</string>
    <string name="from_input_hint">from</string>
    <string name="to_input_hint">to</string>
    <string name="toolbar_filter_button">Filter</string>
    <string name="main_window_worker">Main Window- Worker</string>
    <string name="profile_window">Profile Window</string>
    <string name="job_list_element">Job List Element</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="job_details_window">Job Details Window</string>
    <string name="jobs_history_window">Jobs History Window</string>
    <string name="report_window">If you want to generate your report press the button below</string>
    <string name="generate_report">Generate Report</string>
    <string name="profile_edit_window">Profile Edit Window</string>
    <string name="profile_remove_window">Profile Remove Window</string>
    <string name="logout_user">Logout</string>
    <string name="user_name">Name:</string>
    <string name="profile_settings_label">Profile settings</string>
    <string name="profile_label">Profile</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="apartment_name_label">Apartment</string>
    <string name="booking_cancel_button_text">Cancel</string>
    <string name="booking_cancel_title">Booking cancellation</string>
    <string name="cancel_booking_button">Cancel Booking</string>
    <string name="apartments_list_name">Apartment</string>
    <string name="current_password_label">Password:</string>
    <string name="new_password_label">New Passw:</string>
    <string name="new_password_hint">New Password</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="jobs_list">Jobs List</string>
    <string name="jobs_history">Jobs History</string>
    <string name="jobs_report">Jobs Report</string>
</resources>
