<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tenant.activities.WriteComplaintActivity">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/write_complaint_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/complaint_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/apartment_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/apartment_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/apartment_name_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@id/complaint_text"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/apartments_spinner"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:spinnerMode="dropdown"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/apartment_name_label"
        app:layout_constraintBottom_toTopOf="@id/complaint_text"
        tools:layout_editor_absoluteY="90dp" />

    <EditText
        android:id="@+id/complaint_text"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:ems="10"
        android:hint="@string/write_complaint_menu_item"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/bottom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_include"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/send_complaint_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:text="@string/send_complaint_button"
        android:onClick="sendComplaint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/complaint_text" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/bottom_navigation_colors"
        app:itemTextColor="@color/bottom_navigation_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/tenant_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>